Improve new backup handling (#9179)

--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -123,13 +123,10 @@
     <string translatable="false" name="pref_fakekey_dataDir">pref_fakekey_dataDir</string>
     <string translatable="false" name="pref_loaddirectionimg">loaddirectionimg</string>
     <string translatable="false" name="pref_fakekey_preference_backup">fakekey_preference_backup</string>
-    <string translatable="false" name="pref_fakekey_preference_backupsettings_light">fakekey_preference_backupsettings_light</string>
-    <string translatable="false" name="pref_fakekey_preference_backupsettings_full">fakekey_preference_backupsettings_full</string>
     <string translatable="false" name="pref_fakekey_preference_restoresettings">fakekey_preference_restoresettings</string>
     <string translatable="false" name="pref_fakekey_preference_restore">fakekey_preference_restore</string>
-    <string translatable="false" name="pref_backups_backup_history">backups_backup_history</string>
-    <string translatable="false" name="pref_backup_caches">backup_caches_enabled</string>
-    <string translatable="false" name="pref_backup_settings">backup_settings_enabled</string>
+    <string translatable="false" name="pref_fakekey_preference_restore_dirselect">fakekey_preference_restore_dirselect</string>
+    <string translatable="false" name="pref_backups_backup_history_length">backup_history_length</string>
     <string translatable="false" name="pref_backup_logins">backup_logins_enabled</string>
     <string translatable="false" name="pref_fakekey_preference_maintenance_directories">pref_fakekey_preference_maintenance_directories</string>
     <string translatable="false" name="pref_dbonsdcard">dbonsdcard</string>
