--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -1110,22 +1110,21 @@
         <PreferenceCategory android:title="@string/init_backup_title"
             android:layout="@layout/preference_category"
             android:summary="@string/init_backup_summary">
-
-            <CheckBoxPreference
-                android:defaultValue="true"
-                android:key="@string/pref_backup_caches"
-                android:summary="@string/init_backup_caches"
-                android:iconSpaceReserved="true" />
-            <CheckBoxPreference
-                android:defaultValue="true"
-                android:key="@string/pref_backup_settings"
-                android:summary="@string/init_backup_program_settings"
-                android:iconSpaceReserved="true" />
+            <Preference
+                android:selectable="false"
+                android:summary="@string/init_backup_history_length_summary"
+                android:title="@string/init_backup_history_length_title" />
+            <cgeo.geocaching.settings.BackupSeekbarPreference
+                android:key="@string/pref_backups_backup_history_length"
+                app:min="0"
+                app:max="@integer/backup_history_length_max"
+                app:hasDecimals="false"
+                android:defaultValue="@integer/backup_history_length_default" />
             <CheckBoxPreference
                 android:defaultValue="false"
                 android:key="@string/pref_backup_logins"
-                android:summary="@string/init_backup_logins"
-                android:iconSpaceReserved="true" />
+                android:title="@string/init_backup_logins"
+                android:summary="@string/init_backup_logins_summary" />
             <Preference
                 android:key="@string/pref_fakekey_preference_backup"
                 android:title="@string/init_backup_now" />
@@ -1136,15 +1135,10 @@
             <Preference
                 android:key="@string/pref_fakekey_preference_restore"
                 android:title="@string/init_backup_start_restore" />
-        </PreferenceCategory>
-
-        <PreferenceCategory android:title="@string/settings_advanced"
-            android:layout="@layout/preference_category">
-            <CheckBoxPreference
-                android:defaultValue="false"
-                android:key="@string/pref_backups_backup_history"
-                android:title="@string/init_backup_create_backup_history" />
+            <Preference
+                android:key="@string/pref_fakekey_preference_restore_dirselect"
+                android:title="@string/init_backup_restore_different_backup" />
         </PreferenceCategory>
     </PreferenceScreen>
 
-    </PreferenceScreen>
+</PreferenceScreen>
