--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -7,7 +7,6 @@
 <h4>Map:</h4>
 <ul>
 <li>Fix: Missing information (eg.: hint) for stored caches when in live map mode</li>
-<li>Fix: Export position history based on GMT time zone</li>
 <li>Change: Moved \"Combined (Offline)\" map entry to top of offline maps</li>
 </ul>
 
@@ -31,12 +30,14 @@
 
 <h4>Other:</h4>
 <ul>
-<li>GPX export of position history: added timestamps</li>
 <li>Change: Backup / restore caches and settings in one step</li>
 <li>New: Preserve multiple backups of caches and settings</li>
+<li>Fix: GPX export of position history: timestamps are now GMT-based</li>
+<li>New: GPX export of position history: added elevation info</li>
 <li>New: Set/read GSAK "user defined waypoint" flag on GPX export/import (if applicable)</li>
+<li>Fix: Export waypoints even if they have no coordinates</li>
 <li>Change: Throw a runtime error if db can neither be opened nor created</li>
-<li>New: Automatically convert search input to upper case</li>
+<li>New: Automatically convert geocode search input to upper case</li>
 <li>Change: Updated widget icons</li>
 <li>Updated list of contributors</li>
 </ul>
