fixes #8978 - center content in image list view vertically

--- a/main/res/layout/imagelist_item.xml
+++ b/main/res/layout/imagelist_item.xml
@@ -27,6 +27,7 @@
             android:scaleType="centerInside"
             android:layout_alignParentLeft="true"
             android:layout_gravity="left"
+            android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_menu_add"
             tools:src="@tools:sample/avatars"/>
@@ -37,6 +38,7 @@
             android:layout_toLeftOf="@+id/image_delete"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:descendantFocusability="blocksDescendants"
             android:orientation="vertical"
             android:layout_marginLeft="12dp">
@@ -45,6 +47,7 @@
                 android:id="@+id/image_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:focusable="false"
                 android:textColor="?text_color"
                 android:textSize="18sp"
@@ -59,7 +62,7 @@
                 android:layout_gravity="left"
                 android:ellipsize="end"
                 android:focusable="false"
-                android:lines="2"
+                android:maxLines="2"
                 android:scrollHorizontally="true"
                 android:textColor="?text_color_headline"
                 android:textSize="14sp"
@@ -74,7 +77,6 @@
                 android:layout_gravity="left"
                 android:ellipsize="end"
                 android:focusable="false"
-                android:lines="2"
                 android:scrollHorizontally="true"
                 android:textColor="?text_color"
                 android:textSize="14sp"
@@ -89,8 +91,7 @@
             style="@style/action_bar_action"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="6dp"
             android:scaleType="centerInside"
             android:layout_toLeftOf="@+id/image_drag"
@@ -102,8 +103,7 @@
             android:id="@+id/image_drag"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:scaleType="centerInside"
