--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -10,25 +10,26 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <h4>Map:</h4>
 <ul>
 <li>Change: Old mapsforge map has been disabled and will be removed in future releases.</li>
-<li>Fix: Missing information (eg.: hint) for stored caches when in live map mode</li>
 <li>Change: Moved \"Combined (Offline)\" map entry to top of offline maps</li>
+<li>Fix: Missing information (eg.: hint) for stored caches when in live map mode</li>
+<li>Fix: Preserve zoom level for leaving/entering map</li>
 <li>Fix: Remove temporary downloaded map file after successful copy to c:geo</li>
 <li>Fix: Individual route: Update distance on item removal</li>
-<li>New: Added attribution to contributors on OpenStreetMap maps</li>
 <li>Fix: Crash on Google Maps map being put into the background</li>
+<li>New: Added attribution to contributors on OpenStreetMap maps</li>
 </ul>
 
 <h4>Cache details:</h4>
 <ul>
 <li>Change: Combine note and user note for export waypoint to GPX, on import split them up</li>
-<li>New: provide direct log link ability for gc.com/oc.*/gc.su</li>
 <li>Change: Disable cache detail share menu for user-defined caches</li>
-<li>New: Support [TYPE] in signature</li>
 <li>Fix: Hint is not displayed on compass view, when launched directly from map</li>
+<li>Fix: Update list of waypoints on extract waypoints</li>
+<li>New: provide direct log link ability for gc.com/oc.*/gc.su</li>
+<li>New: Support [TYPE] in signature</li>
 <li>New: Image upload on logging: always remove EXIF data</li>
 <li>New: Image upload on logging: allow resorting images</li>
 <li>New: Waypoint calculator: add option to lower-case all variables</li>
-<li>Fix: Update list of waypoints on extract waypoints</li>
 </ul>
 
 <h4>Cache lists:</h4>
@@ -42,11 +43,11 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>Change: Backup / restore caches and settings in one step</li>
 <li>New: Preserve multiple backups of caches and settings</li>
 <li>Fix: Adapt trackable search to website change on geocaching.com</li>
+<li>Fix: Export waypoints even if they have no coordinates</li>
 <li>Fix: GPX export of position history: timestamps are now GMT-based</li>
 <li>New: GPX export of position history: added elevation info</li>
 <li>New: Set/read GSAK "user defined waypoint" flag on GPX export/import (if applicable)</li>
 <li>New: Format GPX export file more human-readable</li>
-<li>Fix: Export waypoints even if they have no coordinates</li>
 <li>Change: Throw a runtime error if db can neither be opened nor created</li>
 <li>New: Automatically convert geocode search input to upper case</li>
 <li>Change: Updated widget icons</li>
