--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -93,6 +93,7 @@
     <string translatable="false" name="pref_zoomincludingwaypoints">zoomincludingwaypoints</string>
     <string translatable="false" name="pref_brouterDistanceThreshold">brouterDistanceThreshold</string>
     <string translatable="false" name="pref_brouterShowBothDistances">pref_brouterShowBothDistances</string>
+    <string translatable="false" name="pref_bigSmileysOnMap">pref_bigSmileysOnMap</string>
     <string translatable="false" name="pref_proximityNotificationGeneral">pref_proximityNotificationGeneral</string>
     <string translatable="false" name="pref_proximityNotificationSpecific">pref_proximityNotificationSpecific</string>
     <string translatable="false" name="pref_proximityDistanceFar">pref_proximityDistanceFar</string>
