--- a/main/res/layout/map_mapsforge.xml
+++ b/main/res/layout/map_mapsforge.xml
@@ -50,6 +50,7 @@
             android:textColor="@color/just_black"
             android:background="#999999"
             android:textColorLink="#0000EE"
+            android:text="@string/map_source_attribution_legacy_text"
             android:textSize="10dp"
             tools:text="Example Map Attribution"/>
 
