refactor map distance display

--- a/main/res/layout/map_google.xml
+++ b/main/res/layout/map_google.xml
@@ -40,6 +40,8 @@
             android:enabled="true"
             android:keepScreenOn="true" />
 
+        <include layout="@layout/map_distanceinfo" />
+
         <include layout="@layout/map_progressbar" />
 
     </RelativeLayout>
