--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -19,6 +19,7 @@ Have a look at our <a href="https://faq.cgeo.org/#android11">FAQ</a> for more de
 <li>Fix: Individual route: Update distance on item removal</li>
 <li>Fix: Crash on Google Maps map being put into the background</li>
 <li>Fix: Global filter in \"live map\" mode</li>
+<li>Fix: Too many server requests on \"live map\" movements</li>
 <li>New: Added attribution to contributors on OpenStreetMap maps</li>
 <li>New: Added option to show big smileys for found caches</li>
 <li>New: Enlarge display of distance to current navigation target by tapping on it</li>
