--- a/main/res/layout/map_distanceinfo.xml
+++ b/main/res/layout/map_distanceinfo.xml
@@ -47,6 +47,14 @@
         style="@style/map_distanceinfo" />
 
     <TextView
+        android:id="@+id/routeDistanceSupersize"
+        android:layout_marginTop="0dp"
+        android:layout_alignBottom="@id/distanceSupersize"
+        android:layout_alignParentRight="true"
+        android:layout_width="100dp"
+        style="@style/map_distanceinfo" />
+
+    <TextView
         android:id="@+id/distanceSupersize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
