refactor map distance views

--- a/main/res/layout/map_distanceinfo.xml
+++ b/main/res/layout/map_distanceinfo.xml
@@ -6,17 +6,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/target"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginRight="92dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:layout_width="wrap_content"
+        style="@style/map_distanceinfo"
+        android:gravity="left" />
+
+    <TextView
         android:id="@+id/distance1"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_width="100dp"
-        style="@style/map_distanceinfo" />
-
-    <TextView
-        android:id="@+id/distance1info"
-        android:layout_toLeftOf="@id/distance1"
-        android:layout_marginRight="0dp"
-        android:layout_width="15sp"
         style="@style/map_distanceinfo" />
 
     <TextView
@@ -28,26 +33,9 @@
         style="@style/map_distanceinfo" />
 
     <TextView
-        android:id="@+id/distance2info"
-        android:layout_marginTop="0dp"
-        android:layout_below="@id/distance1info"
-        android:layout_toLeftOf="@id/distance2"
-        android:layout_marginRight="0dp"
-        android:layout_width="15sp"
-        style="@style/map_distanceinfo" />
-
-    <TextView
-        android:id="@+id/routeDistance"
+        android:id="@+id/distance3"
         android:layout_marginTop="0dp"
         android:layout_below="@id/distance2"
-        android:layout_alignParentRight="true"
-        android:layout_width="100dp"
-        style="@style/map_distanceinfo" />
-
-    <TextView
-        android:id="@+id/routeDistanceSupersize"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/distanceSupersize"
         android:layout_alignParentRight="true"
         android:layout_width="100dp"
         style="@style/map_distanceinfo" />
@@ -63,5 +51,32 @@
         app:autoSizeMaxTextSize="120sp"
         app:autoSizeStepGranularity="2sp"
         style="@style/map_distanceinfo_supersize" />
+
+    <TextView
+        android:id="@+id/targetSupersize"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginRight="92dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:layout_width="wrap_content"
+        style="@style/map_distanceinfo_no_background"
+        android:gravity="left" />
+
+    <TextView
+        android:id="@+id/distance1Supersize"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="100dp"
+        style="@style/map_distanceinfo_no_background" />
+
+    <TextView
+        android:id="@+id/distance2Supersize"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/distanceSupersize"
+        android:layout_alignParentRight="true"
+        android:layout_width="100dp"
+        style="@style/map_distanceinfo" />
 
 </RelativeLayout>
