--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -409,13 +409,13 @@
     </style>
 
     <!-- map distance info style -->
-    <style name="map_distanceinfo">
-        <item name="android:layout_marginRight">-2dp</item>
-        <item name="android:paddingTop">4dp</item>
+    <style name="map_distanceinfo_no_background">
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
         <item name="android:layout_height">28dp</item>
-        <item name="android:background">@drawable/icon_bcg</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:gravity">right</item>
         <item name="android:lines">1</item>
         <item name="android:textColor">@color/text_icon</item>
         <item name="android:textStyle">bold</item>
@@ -424,11 +424,16 @@
         <item name="android:maxLines">1</item>
     </style>
 
+    <style name="map_distanceinfo" parent="map_distanceinfo_no_background">
+        <item name="android:background">@drawable/icon_bcg</item>
+    </style>
+
     <style name="map_distanceinfo_supersize" parent="map_distanceinfo">
         <item name="android:layout_marginLeft">-2dp</item>
         <item name="android:textSize">72sp</item>
         <item name="android:paddingTop">15dp</item>
         <item name="android:layout_marginBottom">-10dp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 
     <!-- about c:geo contributors style -->
